<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bill_row_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bill_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dip"
        android:layout_weight="0.5"
        android:text="@string/sample_year"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bill_usage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:text="@string/sample_usage"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bill_payments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:text="@string/sample_payment"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bill_fees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:text="@string/sample_fee"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bill_costs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:text="@string/sample_costs"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bill_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="5dip"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:text="@string/sample_costs"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</TableRow>