<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bill_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_description"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/description"
        android:layout_alignParentEnd="true"
        android:text="@string/sample_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/description"
        android:layout_marginEnd="5dip"
        android:layout_toStartOf="@id/end"
        android:text="@string/sample_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dip"
        android:text="@string/monthly_payments"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/payments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dip"
        android:text="@string/sample_payment"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payments"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dip"
        android:text="@string/monthly_fees"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payments"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dip"
        android:text="@string/sample_payment"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fees"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dip"
        android:text="@string/costs"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/costs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fees"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dip"
        android:text="@string/sample_payment"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/costs"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dip"
        android:background="@drawable/border"
        android:text="@string/balance"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/costs"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dip"
        android:text="@string/sample_payment"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

</RelativeLayout>