<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TableRow
        android:id="@+id/button_row"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/reading_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:text="@string/save"/>

    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_row">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/reading_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/meter_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sample_unit"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/digit_0"
                    style="@style/DigitStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"/>

                <TextView
                    android:id="@+id/digit_1"
                    style="@style/DigitStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"/>

                <TextView
                    android:id="@+id/digit_2"
                    style="@style/DigitStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"/>

                <TextView
                    android:id="@+id/digit_3"
                    style="@style/DigitStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"/>

                <TextView
                    android:id="@+id/digit_4"
                    style="@style/DigitStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"/>

                <TextView
                    android:id="@+id/digit_5"
                    style="@style/DigitStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"/>

                <TextView
                    android:id="@+id/digit_6"
                    style="@style/DigitStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"/>

                <TextView
                    android:id="@+id/digit_7"
                    style="@style/DigitStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero"/>
            </TableRow>

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false">

                <Button
                    android:id="@+id/plus_1000"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus_1000"/>

                <Button
                    android:id="@+id/plus_100"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus_100"/>

                <Button
                    android:id="@+id/plus_10"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus_10"/>

                <Button
                    android:id="@+id/plus_1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus_1"/>
            </TableRow>

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false">

                <Button
                    android:id="@+id/minus_1000"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus_1000"/>

                <Button
                    android:id="@+id/minus_100"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus_100"/>

                <Button
                    android:id="@+id/minus_10"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus_10"/>

                <Button
                    android:id="@+id/minus_1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus_1"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:gravity="center_horizontal"
                    android:text="@string/costs"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/reading_costs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:gravity="center_horizontal"
                    android:text="@string/sample_costs"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>